add GC verbose output because of many GC errors